--- a/javafx_project/pom.xml
+++ b/javafx_project/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19-ea+7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.41.2.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
